--- a/individualGolfModel.ipynb
+++ b/individualGolfModel.ipynb
@@ -606,7 +606,7 @@
         "    print(f\"   • {col:12s}: Target ≥ {good_avg:.1f}% (vs {bad_avg:.1f}% in bad rounds, Δ={diff:+.1f})\")\n",
         "\n",
         "print(\"\\n\" + \"=\" * 60)\n",
-        "print(\"🏌️ PRACTICE PRIORITIES FOR SPRING/SIMULATOR\")\n",
+        "print(\" PRACTICE PRIORITIES FOR SPRING/SIMULATOR\")\n",
         "print(\"=\" * 60)\n",
         "\n",
         "# Recommend top 3 areas based on SHAP and correlation\n",
@@ -693,7 +693,7 @@
             "   • Up&Down%    : Target ≥ 48.7% (vs 27.4% in bad rounds, Δ=+21.3)\n",
             "\n",
             "============================================================\n",
-            "🏌️ PRACTICE PRIORITIES FOR SPRING/SIMULATOR\n",
+            " PRACTICE PRIORITIES FOR SPRING/SIMULATOR\n",
             "============================================================\n",
             "\n",
             "Priority 2: GIR% (45.7% importance)\n",
